# kannel-appliance-installer

./: .gitignore  Makefile.in  README  build  configure.ac
boot/: .gitignore  initfs  modules  options.mk.in
boot/scripts.d/: 80-make-initfs
iso/: 2G_swap-rest_root.profile  EULA.test  EULA.txt
iso/prof_templates/: 1G_swap-3G_root.profile  2G_swap-4G_root-rest_home.profile  2G_swap-4G_root-rest_opt.profile  2G_swap-4G_root.profile
iso/syslinux/: isolinux.cfg  menu.c32
live/: Makefile.in
live/chroot/live/: config  fstab.tpl  ini2fstab  ini2mkfs  ini2sfdisk  init  install
live/chroot/sbin/: fake_remount_rw
live/chroot/usr/share/simple-installer/: admin_user  cerrorbox  create-initrds  errorbox  eth_form  eula  install_lilo  mount_backup_image  msgbox  raid  root_passwd  select_backup_device  select_device  select_diskprofile  select_nic  select_profile  select_timezone  zsh-curses  zsh-msgbox
live/image-scripts.d/: .gitignore  00-mtab  01-install  01-system  02-clock  03-locale  04-user  ff-cleanup  ff-system
live/packages.d/: basesystem.lst  inst2.lst  interactivesystem.lst  kernel.lst  kernel.lst.in  partitioning.lst  rescue.lst
